connected psql database to soc lookup

--- a/strideNCESCrosswalkPrototypePython/psql/config/database.ini
+++ b/strideNCESCrosswalkPrototypePython/psql/config/database.ini
@@ -1,6 +1,6 @@
 [postgresql]
 host = 139.147.9.145
-database = bls2020
-user = markaris
-password = cs390f21
+database = stride_db
+user = public_reader
+password = oogleBoss.23
 port = 5432
