--- a/stride_packages/python/setup.cfg
+++ b/stride_packages/python/setup.cfg
@@ -14,8 +14,6 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
-install_requires = postgresql-common
-    libpq-dev
-    psycopg2
+install_requires = psycopg2
 [options.packages.find]
 where = src
