Add database_init to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 **/stride_env
 **/stride_data.egg-info
 __pycache__
+database_init.txt
 strideNCESCrosswalkPrototypePython/~$CIP2020_SOC2018_Crosswalk.xlsx
