--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 **/stride_data.egg-info
 __pycache__
 database_init.txt
+database.ini
 matched_soc.csv
 strideNCESCrosswalkPrototypePython/~$CIP2020_SOC2018_Crosswalk.xlsx
